--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "app-ebd",
   "short_name": "app-ebd",
-  "start_url": "/app/",
+  "start_url": "https://www.escola-ebd.com/p/blog-page_16.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/ebd/imagens/logo-192.png",
+      "src": "https://ivaldof.github.io/ebd/logo-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/ebd/imagens/logo-512.png",
+      "src": "https://ivaldof.github.io/ebd/logo-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
